force-app/main/default/objects/Log__c/fields/LogMessage__c.field-meta.xml
<CustomField>
    <fullName>LogMessage__c</fullName>
    <label>Message</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>