force-app/main/default/objects/Log__c/fields/LogSubject__c.field-meta.xml
<CustomField>
    <fullName>LogSubject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>